--- a/src/index.css
+++ b/src/index.css
@@ -325,6 +325,13 @@ body {
   flex: 1;
 }
 
+.login-error {
+  color: #e74c3c;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-weight: bold;
+}
+
 @media (min-width: 720px) {
   .account {
     flex-direction: row;
