--- a/src/index.css
+++ b/src/index.css
@@ -74,12 +74,18 @@ body {
 }
 
 .hero {
-  background-image: url('../bank-tree.webp');
-  background-position: 0 -50px;
-  background-size: cover;
-  background-repeat: no-repeat;
   height: 300px;
   position: relative;
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .hero-content {
